# kiro-slack-bridge

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  GETTING_STARTED.md  README.md  SUMMARY.md  bridge.py  config.local.yaml.example  kiro-slack-bridge@.service  main.py  pyproject.toml  test_bridge.py
.github/workflows/: test.yml
